part2/04/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dwk-todo-project-ns
  labels:
    name: dwk-todo-project-ns
