part2/04/manifests/deployment-todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-todo-project-ns
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: thepapermen/devopswithkubernetes:todo-backend-0.4.0-alpine
