part2/04/manifests/service-image-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-todo-project-ns
  name: todo-image-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-image-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
