part2/04/manifests/service-todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-todo-project-ns
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
