part2/04/manifests/service-todo-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-todo-project-ns
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
