part2/04/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dwk-todo-project-ns
  name: todo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2346
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: todo-image-backend-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-frontend-svc
            port:
              number: 2347
